tests/error/array_errors/array_index_negative_oob.err
Error: Index out of bounds (at $FILE:7:10)
  | 
5 | def main() -> None:
6 |    arr = array(i for i in range(5))
7 |    return arr[-5]
  |           ^^^ Array index -5 is out of bounds for array of size 5.

Guppy compilation failed due to 1 previous error
